crates/tmark-writers/tests/snapshots/fixtures__diag-table-unknown-key@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{center}
\begin{tabularx}{\linewidth}{>{\raggedright\arraybackslash}X>{\raggedright\arraybackslash}X}
\toprule
\textbf{A} & \textbf{B} \\
\midrule
1 & 2 \\
\bottomrule
\end{tabularx}
\end{center}

---requires---
{
  "packages": [
    "booktabs",
    "tabularx"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
