crates/tmark-writers/tests/snapshots/fixtures__diag-table-width@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{center}
\begin{tabularx}{1.5\linewidth}{>{\raggedright\arraybackslash}X>{\raggedright\arraybackslash}p{\dimexpr 0\linewidth-2\tabcolsep\relax}}
\toprule
A & B \\
\midrule
1 & 2 \\
\bottomrule
\end{tabularx}
\end{center}

---requires---
{
  "packages": [
    "booktabs",
    "tabularx"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
