crates/tmark-writers/tests/snapshots/fixtures__diag-table-width@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
#table(
  columns: (auto, 0%,),
  align: (left, left,),
  table.header([A], [B]),
  [1], [2],
)

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
