crates/tmark-writers/tests/snapshots/fixtures__diag-table-yaml@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<pre><code class="language-yaml table">- not
- a mapping
</code></pre>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
