crates/tmark-writers/tests/snapshots/fixtures__diag-table-yaml@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tscode}[lang=yaml table]
- not
- a mapping
\end{tscode}

---requires---
{
  "packages": [],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
