crates/tmark-writers/tests/snapshots/fixtures__diag-table-yaml@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
```yaml table
- not
- a mapping
```

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
