crates/tmark-writers/tests/snapshots/fixtures__directive-foreign@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Next paragraph.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
