crates/tmark-writers/tests/snapshots/fixtures__divider@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>First page.</p>
<hr />
<p>Second page.</p>
<blockquote>
<p>Before the rule.</p>
<hr class="rule" />
<p>After the rule.</p>
</blockquote>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
